# OBD2

./: .backfill-V0.27.17-drives-11-20-complete  .deploy-version  .env.example  .env.production.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  anomaly_thresholds.json  config.example.json  config.json  main.py  pyproject.toml  requirements-dev.txt  requirements-pi.txt  requirements-server.txt  requirements.txt  validate_config.py
classes/: car.py
controller/: anomaly_controller.py  base_controller.py  obd2_controller.py
data/: smoke_test_results.json
deploy/: README.md  RELEASE_VERSION  addresses.sh  boot-progress-arm.service  boot-progress-finalize.service  deploy-pi.sh  deploy-server.sh  deploy.conf.example  drain-forensics.service  drain-forensics.timer  eclipse-obd.service  eclipse-powerwatch.service  enforce-eeprom-power-off-on-halt.sh  install-rfcomm-bind.sh  install-server.sh  install-service.sh  journald-persistent.conf  nm-disable-wifi-powersave.conf  obd-server.service  obd2-server.service  orphan-cleanup.service  orphan-cleanup.timer  rfcomm-bind.service  server-analytics-batch.service  server-analytics-batch.timer  setup-mariadb.sh  uninstall-service.sh
docs/: README.md  backup.md  bluetooth-setup.md  cross-platform-development.md  deployment-checklist.md  hardware-reference.md  phase2-deploy-and-acceptance-runsheet.md  pi-power-state.md  testing.md
model/: anomaly_model.py  base_model.py  obd2_connection.py  obd2_schema.py
offices/: handbook.md
pm/: README.md  backlog.json  projectManager.md  roadmap.md  story_counter.json
ralph/: README.md  agent-pi.md  agent.md  get_next_agent.py  prd.json  progress.txt  prompt.md  ralph.sh  ralph_agents.json  set_agent_free.py  stories.json
scripts/: __init__.py  apply_server_migrations.py  audit_config_literals.py  audit_config_literals.sh  backfill_drive_statistics.py  backfill_drive_summary.py  backfill_drive_summary_analytics_fields.py  backfill_orphan_drive_id.py  backfill_pi_battery_health_log_historical_drains.py  backfill_premint_orphans.py  backfill_server_battery_health_log_stranded.py  backfill_server_premint_orphans.py  bench_crash_drill.sh  check_platform.py  cleanup_orphan_realtime_data.py  connect_obdlink.sh  deploy-env.sh  deploy.sh  drain_forensics.py  drain_log_simple.sh  export_regression_fixture.sh  generate_api_key.sh  load_data.py  output2.txt  output3.txt  output4.txt  pair_obdlink.sh  pi_setup.sh  pi_smoke_test.py  post_drive_review.sh  reconcile_drive_summary.py  record_drain_test.py  render_advanced_tier_sample.py  render_primary_screen_live.py  replay_pi_fixture.sh  report.py  schema_diff.py  seed_eclipse_vin.py  seed_pi_fixture.py  seed_scenarios.py  (+15 more)
specs/: Plan.md  README.md  anti-patterns.md  architecture.md  backlog.json  best-practices.md  cpu-specs-v2.txt  cpu-specs.txt  glossary.md  golden_code_sample.py  gpu-specs.txt  grounded-knowledge.md  memory-specs-v2.txt  memory-specs.txt  methodology.md  obd2-research.md  projectManager.md  rule-13-audit-discipline.md  ssot-design-pattern.md  standards.md  system-info.txt
sql/: create_anomaly_table.sql  create_obd2_tables.sql
src/: README.md  __init__.py  config.json  main.py  obd_config.json
tester/: AGENT.md  README.md  tester.md
tests/: README.md  __init__.py  conftest.py  run_all_tests.py  run_tests_adafruit_display.py  run_tests_ai_analyzer.py  run_tests_ai_prompt_template.py  run_tests_alert_manager.py  run_tests_battery_monitor.py  run_tests_calibration_comparator.py  run_tests_calibration_manager.py  run_tests_data_exporter.py  run_tests_data_logger.py  run_tests_data_retention.py  run_tests_database.py  run_tests_display_manager.py  run_tests_drive_detector.py  run_tests_drive_scenario.py  run_tests_error_handler.py  run_tests_failure_injector.py  run_tests_logging.py  run_tests_main.py  run_tests_obd_config.py  run_tests_obd_connection.py  run_tests_obd_parameters.py  run_tests_ollama_manager.py  run_tests_power_monitor.py  run_tests_profile_manager.py  run_tests_profile_statistics.py  run_tests_profile_switcher.py  run_tests_recommendation_ranker.py  run_tests_sensor_simulator.py  run_tests_service.py  run_tests_shutdown_command.py  (+140 more)
view/: base_view.py
(+2029 files in other folders)
